# computing-at-scale-2025-SB-Final-Project

./: CMakeLists.txt  Computing at Scale Final Presentation.pptx  README.md  bundle_data.csv  csv_loader.hpp  expected_trajectories_bundle_32.csv  expected_trajectories_full.csv  expected_trajectory.csv  expected_trajectory_full.csv  initial_bundle_32.csv  initial_bundles_32_33.csv  install.sh  l1_dot_2B_propul.cpp  l1_dot_2B_propul.hpp  lm_dot_2B_propul.cpp  lm_dot_2B_propul.hpp  mee2rv.cpp  mee2rv.hpp  odefunc.hpp  project-proposal.md  rv2mee.cpp  rv2mee.hpp  sigma_points_kokkos.cpp  sigma_propagation.cpp  sigma_propagation.hpp  sigma_weights.csv  test_sigma_points.cpp  test_sigma_propagation.cpp  test_sigma_propagation_2.cpp  wrapTo2Pi.cpp  wrapTo2Pi.hpp
.github/workflows/: cmake-tests.yaml
CPU/: csv_loader.hpp  odefunc.cpp  sigma_points_kokkos.cpp  sigma_points_kokkos.hpp  test_sigma_propagation.cpp
CPU/include/: csv_loader.hpp  sigma_propagation.hpp
CPU/src/: l1_dot_2B_propul.cpp  lm_dot_2B_propul.cpp  mee2rv.cpp  odefunc.cpp  rv2mee.cpp  sigma_points_kokkos.cpp  sigma_propagation.cpp
CPU/tests/: test_sigma_points.cpp  test_sigma_propagation.cpp  test_sigma_propagation_cpu.cpp
GPU/: l1_dot_2B_propul_gpu.hpp  sigma_propagation_gpu.cpp
GPU/include/: compute_transform_matrix.hpp  csv_loader_gpu.hpp  kokkos_types.hpp  l1_dot_2B_propul_gpu.hpp  lm_dot_2B_propul_gpu.hpp  mee2rv_gpu.hpp  odefunc_gpu.hpp  propagation_settings.hpp  runtime_propagation_test.hpp  rv2mee_gpu.hpp  sample_controls_host.hpp  sigma_points_kokkos_gpu.hpp  sigma_propagation_gpu.hpp
GPU/src/: compute_transform_matrix.cpp  l1_dot_2B_propul_gpu.cpp  lm_dot_2B_propul_gpu.cpp  main.cpp  main_benchmark.cpp  mee2rv_gpu.cpp  odefunc_gpu.cpp  rv2mee_gpu.cpp  sample_controls_host.cpp  sigma_points_kokkos_gpu.cpp  sigma_propagation.cpp  sigma_propagation_gpu.cpp
GPU/tests/: test_sigma_propagation_gpu.cpp
